Fix import blocks in test files